--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,13 @@ layout: compress
       </footer>
     </div>
 
+    <style>
+      /* 设置页面宽度为最大1200像素并居中对齐 */
+      body {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+    </style>
     {% include scripts.html %}
 
   </body>
